--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       В нашем Telegram-канале вы найдёте самые смешные гифки, трогательные видео, яркие картинки и всё, что связано с обаятельными обезьянками — или, как мы их любим называть, <strong>манки</strong>!  
     </p>
     <p>
-      Присоединяйтесь к нашему дружному чату и каналу — здесь всегда рады новым друзьям, хорошему настроению и обезьяньему хаосу! 🍌
+      Присоединяйтесь к нашему дружному <a href="https://t.me/HataTabora_chat">чату</a> и <a href="https://t.me/HataTabora">каналу</a> — здесь всегда рады новым друзьям, хорошему настроению и обезьяньему хаосу! 🍌
     </p>
     <a href="https://t.me/HataTabora" target="_blank" class="neon-button">Войти в Хату 🐵</a>
     <footer>
@@ -113,4 +113,5 @@
     </footer>
   </div>
 </body>
+
 </html>
