--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
       color: #888;
     }
 
+    .p2a {
+      text-decoration: none;
+      color: white;
+    }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 2rem;
@@ -105,7 +110,7 @@
       В нашем Telegram-канале вы найдёте самые смешные гифки, трогательные видео, яркие картинки и всё, что связано с обаятельными обезьянками — или, как мы их любим называть, <strong>манки</strong>!  
     </p>
     <p>
-      Присоединяйтесь к нашему дружному <a href="https://t.me/HataTabora_chat">чату</a> и <a href="https://t.me/HataTabora">каналу</a> — здесь всегда рады новым друзьям, хорошему настроению и обезьяньему хаосу! 🍌
+      Присоединяйтесь к нашему дружному <a href="https://t.me/HataTabora_chat class="p2a">чату</a> и <a href="https://t.me/HataTabora" class="p2a">каналу</a> — здесь всегда рады новым друзьям, хорошему настроению и обезьяньему хаосу! 🍌
     </p>
     <a href="https://t.me/HataTabora" target="_blank" class="neon-button">Войти в Хату 🐵</a>
     <footer>
@@ -115,3 +120,4 @@
 </body>
 
 </html>
+
