--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     .p2a {
       text-decoration: none;
       color: white;
+      text-decoration: underline;
     }
 
     @media (max-width: 600px) {
@@ -110,7 +111,7 @@
       В нашем Telegram-канале вы найдёте самые смешные гифки, трогательные видео, яркие картинки и всё, что связано с обаятельными обезьянками — или, как мы их любим называть, <strong>манки</strong>!  
     </p>
     <p>
-      Присоединяйтесь к нашему дружному <a href="https://t.me/HataTabora_chat class="p2a">чату</a> и <a href="https://t.me/HataTabora" class="p2a">каналу</a> — здесь всегда рады новым друзьям, хорошему настроению и обезьяньему хаосу! 🍌
+      Присоединяйтесь к нашему дружному <a href="https://t.me/HataTabora_chat" class="p2a"><strong>чату</strong></a> и <a href="https://t.me/HataTabora" class="p2a"><strong>каналу</strong></a> — здесь всегда рады новым друзьям, хорошему настроению и обезьяньему хаосу! 🍌
     </p>
     <a href="https://t.me/HataTabora" target="_blank" class="neon-button">Войти в Хату 🐵</a>
     <footer>
@@ -120,4 +121,5 @@
 </body>
 
 </html>
+
 
