--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
 
     .p2a {
       text-decoration: none;
-      color: white;
-      text-decoration: underline;
+      font-size: 1.2rem;
+      line-height: 1.7;
+      margin-bottom: 30px;
+      color: #e0e0ff;
     }
 
     @media (max-width: 600px) {
@@ -121,5 +123,6 @@
 </body>
 
 </html>
+
 
 
