--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <p>
       Присоединяйтесь к нашему дружному <a href="https://t.me/HataTabora_chat" class="p2a"><strong>чату</strong></a> и <a href="https://t.me/HataTabora" class="p2a"><strong>каналу</strong></a> — здесь всегда рады новым друзьям, хорошему настроению и обезьяньему хаосу! 🍌
     </p>
-    <a href="https://t.me/HataTabora" target="_blank" class="neon-button">Войти в Хату 🐵</a>
+    <a href="https://t.me/HataTabora" target="_blank" class="neon-button">Сосать член 🐵</a>
     <footer>
       © 2025 Хата Табора. Все манки под защитой.
     </footer>
